[package]
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
name = "crates-mirror"
version = "0.2.0"
license = "MIT/Apache-2.0"
description = "Crates.io mirror"
repository = "https://github.com/weiznich/crates-mirror"
readme = "README.md"
keywords = ["crates", "mirror"]
include = [
    "src/main.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md"
]

[dependencies]
clap = "2"
curl = "0.4"
env_logger = "0.3"
git2 = "0.6"
iron = "0.4"
log = "0.3.6"
router = "0.4"
rustc-serialize = "0.3"
sha2 = "0.2"
toml = "0.2"
clippy = {version= "0.0.95", optional = true}


[features]
default = []
