[package]
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
name = "crates-mirror"
version = "0.2.1"
license = "MIT/Apache-2.0"
description = "Crates.io mirror"
repository = "https://github.com/weiznich/crates-mirror"
readme = "README.md"
keywords = ["crates", "mirror"]
include = [
    "src/main.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md"
]

[dependencies]
clap = "2"
curl = "0.4.19"
env_logger = "0.6"
git2 = "0.7"
iron = "0.6"
log = "0.4"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
toml = "0.4"
clippy = {version= "0.0.302", optional = true}


[features]
default = []
